Fix shift times order check in edit-schedule, set responsive font sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ header, footer,
 }
 
 /* Text Colors */
-p, h1, h2, #log-out, #account-container a, .btn, .text-bubble{
+p, h1, h20, #log-out, #account-container a, .btn, .text-bubble{
 	color: #EEEEFF; /* White */
 }
 
@@ -134,6 +134,8 @@ footer{
 
 .first-row{
 	height: 60px !important;
+
+	padding-top: 1rem !important;
 }
 
 .first-col{
@@ -340,7 +342,7 @@ footer{
 	}
 
 	.schedule-text, .shift-text {
-  	font-size: 0.65rem;
+  	font-size: 0.55rem;
 	}
 
 }
@@ -353,7 +355,7 @@ footer{
 	}
 
 	.schedule-text, .shift-text {
-  	font-size: .85rem;
+  	font-size: .75rem;
 	}
 
 	#schedule-container > .row > .col {
@@ -427,7 +429,7 @@ footer{
 	}
 
 	#shift-error{
-		font-size: .75rem;
+		font-size: .5rem;
 		margin-bottom: 1rem;
 	}
 
@@ -512,7 +514,7 @@ footer{
 @media screen and (min-width: 1680px){
 	
 	.schedule-text, .shift-text {
-  	font-size: 1rem;
+  	font-size: .8rem;
 	}
 
 	#schedule-container > .row > .col {
